# inference-service

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: error-handling.md  lmstudio-provider.md  mock-provider.md  mock-server.md  openai-provider.md  providers.md
services/inference-server/: Cargo.toml
services/inference-server/config/: default.yaml  mock.yaml  production.yaml
services/inference-server/mocks/: default.yaml  integration.yaml  openai-complete.yaml  random.yaml  test.yaml
services/inference-server/src/: config.rs  error.rs  lm_client_studio.rs  main.rs  models.rs  telemetry.rs  validations.rs
services/inference-server/src/providers/: lmstudio.rs  mock.rs  mod.rs  openai.rs
