[package]
name = "inference-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
opentelemetry = { version = "0.30", features = ["logs"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = { version = "0.30", features = ["logs"] }
opentelemetry-appender-tracing = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
config = "0.15"
